kubernetes/apps/chrome-runner/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chrome-runner
spec:
  selector:
    app: chrome-runner
  ports:
    - port: 4444
      targetPort: 4444
      name: webdriver
    - port: 7900
      targetPort: 7900
      name: novnc
